force-app/main/default/objects/Investment_Asset__c/Investment_Asset__c.object-meta.xml
<CustomObject>
    <label>Old Investment Asset</label>
    <nameField>
        <label>Investment Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invsetment Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>