force-app/main/default/objects/Investment_Asset__c/fields/As_Of__c.field-meta.xml
<CustomField>
    <fullName>As_Of__c</fullName>
    <description>Value of Investment is considered as of this date.</description>
    <label>As Of</label>
    <type>Date</type>
</CustomField>