force-app/main/default/objects/Investment_Asset__c/fields/Current_Value_Of_Investment__c.field-meta.xml
<CustomField>
    <fullName>Current_Value_Of_Investment__c</fullName>
    <label>Current Value Of Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>