force-app/main/default/objects/Investment_Asset__c/fields/Current_Value_of_Investment_asof_formula__c.field-meta.xml
<CustomField>
    <fullName>Current_Value_of_Investment_asof_formula__c</fullName>
    <formula>&apos;₹&apos; + TEXT(Current_Value_Of_Investment__c) + &quot; as Of &quot; + TEXT(As_Of__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Value of Investment As of</label>
    <type>Text</type>
</CustomField>