force-app/main/default/objects/Investment_Asset__c/fields/Direct_Plan__c.field-meta.xml
<CustomField>
    <fullName>Direct_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Plan?</label>
    <type>Checkbox</type>
</CustomField>