force-app/main/default/objects/Investment_Asset__c/fields/Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>Fund_Type__c</fullName>
    <label>Fund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Debt</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Index</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>