force-app/main/default/objects/Investment_Asset__c/fields/Fund_URL__c.field-meta.xml
<CustomField>
    <fullName>Fund_URL__c</fullName>
    <label>Fund URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>