force-app/main/default/objects/Investment_Asset__c/fields/Issuing_Bank__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issuing Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Bank FDs</relationshipLabel>
    <relationshipName>Investment_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>