force-app/main/default/objects/Investment_Asset__c/fields/Last_Invested_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invested_Date__c</fullName>
    <label>Last Invested Date</label>
    <summarizedField>Investment__c.Investment_Date__c</summarizedField>
    <summaryForeignKey>Investment__c.Investment_Asset__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>