force-app/main/default/objects/Investment_Asset__c/fields/Last_Withdrawal_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Withdrawal_Date__c</fullName>
    <label>Last Withdrawal Date</label>
    <type>Date</type>
</CustomField>