force-app/main/default/objects/Investment_Asset__c/fields/Latest_NAV__c.field-meta.xml
<CustomField>
    <fullName>Latest_NAV__c</fullName>
    <label>Latest NAV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>