force-app/main/default/objects/Investment_Asset__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <formula>Last_Invested_Date__c + FD_Term_In_Days__c</formula>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>