force-app/main/default/objects/Investment_Asset__c/fields/P_and_L__c.field-meta.xml
<CustomField>
    <fullName>P_and_L__c</fullName>
    <formula>Current_Value_Of_Investment__c - Total_Invested_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P&amp;L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>