force-app/main/default/objects/Investment_Asset__c/fields/Recalculate_For_Investments__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_For_Investments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate For Investments</label>
    <type>Checkbox</type>
</CustomField>