force-app/main/default/objects/Investment_Asset__c/fields/ULIP_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>ULIP_Policy_Number__c</fullName>
    <label>ULIP Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>