force-app/main/default/objects/Investment_Asset__c/recordTypes/EPF.recordType-meta.xml
<RecordType>
    <fullName>EPF</fullName>
    <active>false</active>
    <label>EPF</label>
</RecordType>