force-app/main/default/objects/Investment_Asset__c/recordTypes/FD.recordType-meta.xml
<RecordType>
    <fullName>FD</fullName>
    <active>false</active>
    <label>FD</label>
</RecordType>