force-app/main/default/objects/Investment_Asset__c/recordTypes/Metal.recordType-meta.xml
<RecordType>
    <fullName>Metal</fullName>
    <active>false</active>
    <label>Metal</label>
</RecordType>