force-app/main/default/objects/Investment_Asset__c/recordTypes/MF.recordType-meta.xml
<RecordType>
    <fullName>MF</fullName>
    <active>false</active>
    <label>MF</label>
</RecordType>