force-app/main/default/objects/Investment_Asset__c/recordTypes/PPF.recordType-meta.xml
<RecordType>
    <fullName>PPF</fullName>
    <active>false</active>
    <label>PPF</label>
</RecordType>