force-app/main/default/objects/Investment_Asset__c/recordTypes/SIP.recordType-meta.xml
<RecordType>
    <fullName>SIP</fullName>
    <active>false</active>
    <label>SIP</label>
</RecordType>