force-app/main/default/objects/Investment_Asset__c/recordTypes/SmallCase.recordType-meta.xml
<RecordType>
    <fullName>SmallCase</fullName>
    <active>false</active>
    <label>SmallCase</label>
</RecordType>