force-app/main/default/objects/Investment_Asset__c/recordTypes/Stock.recordType-meta.xml
<RecordType>
    <fullName>Stock</fullName>
    <active>false</active>
    <label>Stock</label>
</RecordType>