force-app/main/default/objects/Investment_Asset__c/recordTypes/TBill.recordType-meta.xml
<RecordType>
    <fullName>TBill</fullName>
    <active>false</active>
    <label>TBill</label>
</RecordType>