force-app/main/default/objects/Investment_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Total_Invested_Amount__c</columns>
    <columns>P_and_L__c</columns>
    <columns>Last_Invested_Date__c</columns>
    <columns>Current_Value_Of_Investment__c</columns>
    <columns>Current_Value_of_Investment_asof_formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>